# snowplow-signals-python-sdk

./: .coverage  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  model.py  pyproject.toml
.github/: pull_request_template.md  test.yml
.github/workflows/: dbt_test.yml  integration_tests.yml  release.yml  test.yml
docs/: demo_script.md
examples/: attributes.py  ecom_ootb_batch_feature_view.ipynb  ecom_stream_feature_view.ipynb  features.py  main.py  web_stream_feature_view.ipynb
friday_test/ecommerce_transaction_interactions_features_1/configs/: base_config.json
friday_test/test_with_user_entity_3/configs/: base_config.json
integration_tests/: README.md  replicate_files.py  test_E2E.sh  test_dbt.sh
integration_tests/integration_test/: .gitignore  README.md  dbt_project.yml
integration_tests/integration_test/.scripts/: integration_test.sh
integration_tests/integration_test/ci/: profiles.yml
local_testing/: README.md  api_interaction.py  api_requests.py  minimal_test.py  test_dbt.sh
scripts/: version.py
src/snowplow_signals/: __init__.py  api_client.py  attributes_client.py  definitions.py  feature_store_client.py  features.py  interventions_client.py  interventions_subscription.py  logging.py  registry_client.py  signals.py  testing_client.py
src/snowplow_signals/batch_autogen/: __init__.py  cli.py  cli_params.py  dbt_client.py
src/snowplow_signals/dbt/: __init__.py  cli.py  dbt_client.py
src/snowplow_signals/models/: README.md  __init__.py  attribute.py  attribute_group.py  attribute_key.py  base_signals_object.py  columns.py  criteria_wrapper.py  criterion_wrapper.py  data_source.py  entity.py  feature.py  feature_service.py  feature_view.py  field.py  get_attributes_response.py  interventions.py  model.py  online_attributes_response.py  online_feature_response.py  online_features.py  required_owner_view.py  service.py  test_feature_view.py  types.py  view.py
src/snowplow_signals/prompts/: client.py
src/snowplow_signals_sdk/: Makefile  __init__.py  api_client.py  signals_store.py  utils.py
test/: conftest.py  test_attributes_client.py  test_registry_client.py  test_signals.py  test_utils.py  utils.py
test/auth/: test_client_auth.py  test_trial_auth.py  utils.py
test/auto_gen/: README.md  integration_test.sh  integration_test_view.json  integration_test_view_bigquery.json  integration_test_view_databricks.json  integration_test_view_snowflake.json  mock_attribute_views.json  mock_attribute_views_bigquery.json  mock_attribute_views_databricks.json  mock_attribute_views_snowflake.json  requirements.txt  test_base_config_attributes.py  test_base_config_generator.py  test_cli.py  test_cli_connection_test.py  test_dbt.sh  test_dbt_client.py  test_dbt_config_generator.py  test_dbt_init.py  test_dbt_project_setup.py  test_e2e_batch_autogen.py  test_snapshots.py  test_snapshots_bigquery.py  test_snapshots_databricks.py  test_snapshots_snowflake.py  test_utils.py  utils.py
test/batch_autogen/: test_cli_trial_auth.py
test/interventions/: test_interventions_client.py  utils.py
test/models/: test_attribute.py  test_attribute_group.py  test_attribute_key.py  test_criterion_wrapper.py  test_interventions.py  test_sugar.py  test_view.py
test/prompts/: test_client.py  utils.py
test/signals/: test_signals_ai.py
test/utils/: test_utils.py
tests/: test_required_owner_view.py
(+212 files in other folders)
