[tool.poetry]
name = "snowplow-signals"
version = "0.1.0"
description = ""
authors = ["Snowplow <support@snowplow.io>"]
readme = "README.md"
packages = [{ include = "snowplow_signals", from = "src" }]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.11.4"}
pandas = "^2.2.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
jinja2 = { version = "^3.1.6", optional = true }
typer = { version = "^0.15.2", optional = true }
sqlglot = { version = "^26.16.4", optional = true }

[tool.poetry.extras]
batch-engine = ["jinja2", "typer", "sqlglot"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
pre-commit = "^4.1.0"
isort = "^6.0.0"
ipykernel = "^6.29.5"
respx = "^0.22.0"
datamodel-code-generator = "^0.28.4"
pytest-cov = "^6.1.0"
syrupy = "^4.9.1"
semver = "^3.0.2"
python-dotenv = { version = "^1.1.0", extras = ["cli"] }

[tool.poetry.scripts]
snowplow-batch-autogen = "snowplow_signals.batch_autogen.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = ["noauthmock: mark tests to not mock auth"]
